# picture_book

./: README.md
examples/esp_picture_book_sight/: README.md
examples/esp_picture_book_sight/components/esp32-camera/driver/: camera.c  sccb.c
examples/esp_picture_book_sight/components/esp32-camera/sensors/: ov3660.c
examples/esp_picture_book_sight/components/pca9539/: CMakeLists.txt  pca9539.c
examples/esp_picture_book_sight/components/pca9539/include/: pca9539.h
examples/esp_picture_book_sight/components/vt_server/: CMakeLists.txt  vt_camera.c  vt_camera.h  vt_handle.c  vt_http.c  vt_http.h  vt_media.c  vt_media.h  vt_os.c  vt_os.h  vt_recognize.c  vt_recognize.h
examples/esp_picture_book_sight/components/vt_server/include/: vt_handle.h
examples/esp_picture_book_sight/main/: picture_book_example.c
